--- a/.github/workflows/run_notebook.yml
+++ b/.github/workflows/run_notebook.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run Jupyter Notebook
         run: |
-          jupyter nbconvert --to notebook --execute nazwa_pliku.ipynb --output wynik.ipynb
+          jupyter nbconvert --to notebook --execute Automatic.ipynb --output wynik.ipynb
 
       - name: Commit results
         run: |
