--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          ref: main  # Jeśli Twój branch to "master", zmień na "master"
+
 
       - name: Set up Python
         uses: actions/setup-python@v4
