--- a/.github/workflows/google_drive_upload.yml
+++ b/.github/workflows/google_drive_upload.yml
@@ -1,11 +1,8 @@
 name: Google Drive Upload
 
 on:
-  push:
-    branches:
-      - main  # Uruchamiaj przy pushu na główną gałąź
   schedule:
-    - cron: '0 0 * * *'  # Uruchamiaj codziennie o północy
+    - cron: '*/5 * * * *'  # Uruchamiaj co 5 minut
   workflow_dispatch:  # Umożliwia ręczne uruchomienie workflow przez interfejs GitHub
 
 jobs:
