--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-google-api-python-client==2.20.0
-google-auth==2.19.0
-google-auth-oauthlib==0.5.3
-google-auth-httplib2==0.1.0
-pandas==1.3.3
+# Google API Client libraries
+google-auth==2.28.1
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
+google-api-python-client==2.127.0
+
+# Web scraping
+selenium==4.17.2
+webdriver-manager==4.0.1
+beautifulsoup4==4.12.3
+
+# Data processing
+pandas==2.2.1
+numpy==1.26.4
