--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -26,4 +26,4 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       
       - name: Run script
-        run: python your_script.py
+        run: python scraper.py
