--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -22,6 +22,7 @@ jobs:
       
       - name: Install dependencies
         run: |
+          run: pip install notebook pandas numpy  
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       
