--- a/.github/workflows/RUN-2.yml
+++ b/.github/workflows/RUN-2.yml
@@ -27,4 +27,4 @@ jobs:
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}  # Ustawienie zmiennej środowiskowej z secrets
         run: |
-          python scraping_script.py  # Uruchomienie skryptu
+          python scraper.py  # Uruchomienie skryptu
