--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+pandas
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
 selenium
 webdriver-manager
 beautifulsoup4
-pandas
