--- a/.github/workflows/olx_scrap_workflow.yml
+++ b/.github/workflows/olx_scrap_workflow.yml
@@ -2,7 +2,7 @@ name: OLX Scrap Workflow
 
 on:
   schedule:
-    - cron: '0 */2 * * *'  # Co 2 godziny
+    - cron: '0 4,8,11,14,16,19 * * *'  # Czas UTC
   workflow_dispatch:
 
 jobs:
